Add level-up session workflow
